# duckdb-sharding

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: entity.rs  main.rs  repository.rs  web.rs
