[package]
name = "sharding"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
async-duckdb = "0.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
duckdb = { version = "1.3.2", features = ["chrono"] }
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
